comments sync with monolith